<?xml version="1.0" encoding="utf-8"?>
<resources>

    <plurals name="menit">
        <item quantity="zero">%d minute</item>
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <plurals name="season">
        <item quantity="zero">%d season</item>
        <item quantity="one">%d season</item>
        <item quantity="other">%d seasons</item>
    </plurals>
    <plurals name="episode">
        <item quantity="zero">%d episode</item>
        <item quantity="one">%d episode</item>
        <item quantity="other">%d episodes</item>
    </plurals>
    <string name="app_name">My Movie Catalogue</string>
    <string name="lorem_title">Loren ipsum</string>
    <string name="lorem_ipsum_short">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </string>
    <string name="loren_ipsum_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam hendrerit nisi sed sollicitudin pellentesque. Nunc posuere purus rhoncus pulvinar aliquam. Ut aliquet tristique nisl vitae volutpat. Nulla aliquet porttitor venenatis. Donec a dui et dui fringilla consectetur id nec massa. Aliquam erat volutpat. Sed ut dui ut lacus dictum fermentum vel tincidunt neque. Sed sed lacinia lectus. Duis sit amet sodales felis. Duis nunc eros, mattis at dui ac, convallis semper risus. In adipiscing ultrices tellus, in suscipit massa vehicula eu.</string>
    <string name="judul_title">Title</string>
    <string name="durasi_title">Duration</string>
    <string name="status_title">Status</string>
    <string name="tanggal_rilis_title">Released Date</string>
    <string name="pemain_termahal_title">Most Famous Actors/Actresses</string>
    <string name="genre_title">Genres</string>
    <string name="bahasa_utama_title">Main Language</string>
    <string name="deskripsi_title">Description</string>
    <string name="budget_title">Budget</string>
    <string name="pendapatan_title">Revenue</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">My Movie Catalogue</string>
    <string name="movie_list">Movie List</string>
    <string name="tv_show_list">TV Show List</string>
    <string name="settings">Settings</string>
    <string name="episode_title">Episodes</string>
    <string name="season_title">Seasons</string>

    <string name="judul_value">%s</string>
    <string name="network_failed">Internet disconnected</string>
    <string name="muat_ulang">Data received</string>

    <string name="tvseries_discover_url">https://api.themoviedb.org/3/discover/tv?api_key={API_KEY}&amp;language=en-US</string>
    <string name="tvseries_detail_url">https://api.themoviedb.org/3/tv/{TV_ID}?api_key={API_KEY}&amp;language=en-US</string>
    <string name="pemain_tvseries_url">https://api.themoviedb.org/3/tv/{TV_ID}/credits?api_key={API_KEY}&amp;language=en-US</string>

    <string name="json_url">https://api.themoviedb.org/3/discover/movie?api_key={API_KEY}&amp;language=en-US</string>
    <string name="movie_detail_url">https://api.themoviedb.org/3/movie/{MOVIE_ID}?api_key={API_KEY}&amp;language=en-US</string>
    <string name="pemain_url">https://api.themoviedb.org/3/movie/{MOVIE_ID}/credits?api_key={API_KEY}</string>

    <string name="favorite">Favorite</string>
    <string name="favorite_movie">Favorite Movies</string>
    <string name="favorite_tv">Favorite TV Shows</string>

    <string name="add_favorite">Add to Favorite</string>
    <string name="delete_favorite">Delete from Favorite</string>

    <string name="delete_success">Data deleted</string>
    <string name="add_success">Data added</string>
</resources>
