<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardElevation="12dp"
    tools:context=".Activity.DetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/backgrounddetail"
            android:padding="16dp">

            <TextView
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tv_genre"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/tv_genre_h"
                style="@style/detail_title"
                android:text="@string/genre_title" />

            <TextView
                app:layout_constraintTop_toBottomOf="@id/tv_genre_h"
                app:layout_constraintBottom_toTopOf="@id/tv_detail_h"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/tv_genre"
                style="@style/detail_value"
                android:text="Genre Detail1,Genre Detail2,Genre Detail3" />

            <TextView
                app:layout_constraintTop_toBottomOf="@id/tv_genre"
                app:layout_constraintBottom_toTopOf="@id/tv_bahasa_utama"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/tv_detail_h"
                style="@style/detail_title"
                android:text="@string/bahasa_utama_title" />

            <TextView
                app:layout_constraintTop_toBottomOf="@id/tv_detail_h"
                app:layout_constraintBottom_toTopOf="@id/tv_description_h"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/tv_bahasa_utama"
                style="@style/detail_value"
                android:text="Bahasa Value" />

            <TextView
                app:layout_constraintTop_toBottomOf="@id/tv_bahasa_utama"
                app:layout_constraintBottom_toTopOf="@id/tv_deskripsi"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/tv_description_h"
                style="@style/detail_title"
                android:text="@string/deskripsi_title" />

            <TextView
                app:layout_constraintTop_toBottomOf="@id/tv_description_h"
                app:layout_constraintBottom_toTopOf="@id/tv_budget_h"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/tv_deskripsi"
                style="@style/detail_value"
                android:text="@string/loren_ipsum_long" />

            <TextView
                app:layout_constraintTop_toBottomOf="@id/tv_deskripsi"
                app:layout_constraintBottom_toTopOf="@id/tv_budget"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/tv_budget_h"
                style="@style/detail_title"
                android:text="@string/budget_title" />

            <TextView
                app:layout_constraintTop_toBottomOf="@id/tv_budget_h"
                app:layout_constraintBottom_toTopOf="@id/tv_pendapatan_h"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/tv_budget"
                style="@style/detail_value"
                android:text="Budget Value" />

            <TextView
                app:layout_constraintTop_toBottomOf="@id/tv_budget"
                app:layout_constraintBottom_toTopOf="@id/tv_pendapatan"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/tv_pendapatan_h"
                style="@style/detail_title"
                android:text="@string/pendapatan_title" />

            <TextView
                app:layout_constraintTop_toBottomOf="@id/tv_pendapatan_h"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/tv_pendapatan"
                style="@style/detail_value"
                android:text="Pendapatan Value" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.v7.widget.CardView>