<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardElevation="12dp"
    tools:context=".Activity.DetailActivity"
    >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorAccent"
        >

        <ImageView
            android:id="@+id/img_backdrop"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            tools:src="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.45" />
        <ImageView
            android:id="@+id/img_poster"
            android:layout_width="120dp"
            android:layout_height="150dp"
            android:layout_marginTop="@dimen/activity_margin_vertical"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:scaleType="fitXY"
            tools:src="@color/colorAccent"
            android:layout_marginBottom="@dimen/activity_margin_vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_judul_head"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/tv_judul_head"
            style="@style/detail_title_on_backdrop"
            android:text="@string/judul_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/img_poster"
            app:layout_constraintTop_toTopOf="@id/img_poster"
            app:layout_constraintBottom_toTopOf="@+id/tv_judul"/>

        <TextView
            android:id="@+id/tv_judul"
            style="@style/detail_movie_value_on_back_drop"
            android:text="@string/judul_value"
            app:layout_constraintEnd_toEndOf="@id/tv_judul_head"
            app:layout_constraintStart_toStartOf="@id/tv_judul_head"
            app:layout_constraintTop_toBottomOf="@id/tv_judul_head"
            app:layout_constraintBottom_toTopOf="@+id/tv_durasi_title"
            />

        <TextView
            android:id="@+id/tv_durasi_title"
            style="@style/detail_title_on_backdrop"
            android:text="@string/durasi_title"
            app:layout_constraintStart_toStartOf="@id/tv_judul_head"
            app:layout_constraintEnd_toEndOf="@id/tv_judul_head"
            app:layout_constraintTop_toBottomOf="@id/tv_judul"
            app:layout_constraintBottom_toTopOf="@+id/tv_durasi"
            />

        <TextView
            android:id="@+id/tv_durasi"
            style="@style/detail_movie_value_on_back_drop"
            app:layout_constraintStart_toStartOf="@id/tv_judul_head"
            app:layout_constraintEnd_toEndOf="@id/tv_judul_head"
            app:layout_constraintTop_toBottomOf="@id/tv_durasi_title"
            app:layout_constraintBottom_toTopOf="@+id/tv_status_title"
            android:text="Durasi Value" />

        <TextView
            android:id="@+id/tv_status_title"
            app:layout_constraintEnd_toEndOf="@id/tv_judul_head"
            app:layout_constraintStart_toStartOf="@id/tv_judul_head"
            app:layout_constraintTop_toBottomOf="@id/tv_durasi"
            app:layout_constraintBottom_toTopOf="@+id/tv_status"
            style="@style/detail_title_on_backdrop"
        android:text="@string/status_title" />

        <TextView
            android:id="@+id/tv_status"
            style="@style/detail_movie_value_on_back_drop"
            app:layout_constraintStart_toStartOf="@id/tv_judul_head"
            app:layout_constraintEnd_toEndOf="@id/tv_judul_head"
            app:layout_constraintTop_toBottomOf="@id/tv_status_title"
            app:layout_constraintBottom_toTopOf="@+id/tv_tgl_rilis_title"
            android:text="Status Value" />

        <TextView
            android:id="@+id/tv_tgl_rilis_title"
            app:layout_constraintEnd_toEndOf="@id/tv_judul_head"
            app:layout_constraintStart_toStartOf="@id/tv_judul_head"
            app:layout_constraintTop_toBottomOf="@id/tv_status"
            app:layout_constraintBottom_toTopOf="@+id/tv_tgl_rilis"
            style="@style/detail_title_on_backdrop"
        android:text="@string/tanggal_rilis_title" />

        <TextView
            android:id="@+id/tv_tgl_rilis"
            style="@style/detail_movie_value_on_back_drop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_judul_head"
            app:layout_constraintEnd_toEndOf="@id/tv_judul_head"
            app:layout_constraintTop_toBottomOf="@+id/tv_tgl_rilis_title"
            android:text="Tanggal Rilis Value" />
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>